fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Base_Year_Cases__c.field-meta.xml
<CustomField>
    <fullName>Base_Year_Cases__c</fullName>
    <description>Base Year Cases</description>
    <label>Base Year Cases</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>