fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Cost_of_Sale_SUM__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sale_SUM__c</fullName>
    <description>Cost of Sale SUM</description>
    <label>Cost of Sale SUM</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>