fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Current_Year_Each__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Each__c</fullName>
    <description>Current Year Each</description>
    <label>Current Year Each</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>