fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Fiscal_Quarter_c__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter_c__c</fullName>
    <label>Fiscal Quarter</label>
    <length>4</length>
    <type>Text</type>
</CustomField>