fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Growth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Growth_Amount__c</fullName>
    <description>The dollar amount growth between current year amount and previous year amount</description>
    <formula>Current_Year_Amount__c  -  Previous_Year_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>