fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Growth_Percent__c.field-meta.xml
<CustomField>
    <fullName>Growth_Percent__c</fullName>
    <description>The percent of growth between current year amount ans previous year amount</description>
    <formula>IF(Previous_Year_Amount__c  = 0, 0,((Current_Year_Amount__c  -  Previous_Year_Amount__c )  /  Previous_Year_Amount__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>