fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/List_Price_SUM__c.field-meta.xml
<CustomField>
    <fullName>List_Price_SUM__c</fullName>
    <description>List Price SUM</description>
    <label>List Price SUM</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>