fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>3</length>
    <type>Text</type>
</CustomField>