fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Previous_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Amount__c</fullName>
    <description>Previous Year Amount</description>
    <label>Base Year Sales</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>