fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <description>Process Date</description>
    <label>Process Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>