fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arterial</fullName>
            </value>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>PICCs</fullName>
            </value>
            <value>
                <fullName>VasoNova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>