fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Product_Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Marketing_Code__c</fullName>
    <description>Product Marketing Code</description>
    <label>Product Marketing Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Venous Access</fullName>
            </value>
            <value>
                <fullName>Peripheral Access</fullName>
            </value>
            <value>
                <fullName>Venous Access - Other</fullName>
            </value>
            <value>
                <fullName>Hemodynamic Monitoring</fullName>
            </value>
            <value>
                <fullName>Special Procedures-Other</fullName>
            </value>
            <value>
                <fullName>VasoNova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>