fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>Product Number</description>
    <label>Product Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>