fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Region_Number__c</fullName>
    <description>Region Number</description>
    <label>Region Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>