fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Sales_Amount_SUM__c.field-meta.xml
<CustomField>
    <fullName>Sales_Amount_SUM__c</fullName>
    <description>Sales Amount SUM</description>
    <label>Sales Amount SUM</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>