fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Slfctnew_Buygroup__c.field-meta.xml
<CustomField>
    <fullName>Slfctnew_Buygroup__c</fullName>
    <description>Slfctnew Buygroup</description>
    <label>Slfctnew Buygroup</label>
    <length>12</length>
    <type>Text</type>
</CustomField>