fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Sold_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_ID__c</fullName>
    <description>Customer Sold To Number</description>
    <externalId>true</externalId>
    <label>Sold Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>