fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number__c</fullName>
    <description>Territory Number</description>
    <label>Territory Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>