fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/TFX_Fiscal_Month_Numeric__c.field-meta.xml
<CustomField>
    <fullName>TFX_Fiscal_Month_Numeric__c</fullName>
    <description>Teleflex Fiscal Month(Numeric)</description>
    <label>TFX Fiscal Month(Numeric)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>