fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Transaction_Date_MAX__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_MAX__c</fullName>
    <description>Transaction Date MAX</description>
    <label>Transaction Date MAX</label>
    <length>10</length>
    <type>Text</type>
</CustomField>