fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Transaction_Quantity_SUM__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Quantity_SUM__c</fullName>
    <description>Transaction Quantity SUM</description>
    <label>Transaction Quantity SUM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>