fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Transaction Type</description>
    <label>Transaction Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>