fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/fields/Transaction_Units_SUM__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Units_SUM__c</fullName>
    <description>Transaction Units SUM</description>
    <label>Transaction Units SUM</label>
    <length>12</length>
    <type>Text</type>
</CustomField>