fullSandbox11072023/force-app/main/default/objects/Historical_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Region_Number__c</columns>
    <columns>Territory_Number__c</columns>
    <columns>Sold_To_ID__c</columns>
    <columns>Contract_Number__c</columns>
    <columns>Product_Number__c</columns>
    <columns>List_Price_SUM__c</columns>
    <columns>Process_Date__c</columns>
    <columns>Transaction_Date_MAX__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Units_SUM__c</columns>
    <columns>Transaction_Quantity_SUM__c</columns>
    <columns>TFX_Fiscal_Year__c</columns>
    <columns>TFX_Fiscal_Month_Numeric__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>